--- a/app/src/main/res/drawable/baseline_person_2_24.xml
+++ b/app/src/main/res/drawable/baseline_person_2_24.xml
@@ -1,6 +1,5 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
+<vector android:height="24dp" android:tint="#000000"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M18.39,14.56C16.71,13.7 14.53,13 12,13c-2.53,0 -4.71,0.7 -6.39,1.56C4.61,15.07 4,16.1 4,17.22V20h16v-2.78C20,16.1 19.39,15.07 18.39,14.56z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M9.78,12h4.44c1.21,0 2.14,-1.06 1.98,-2.26l-0.32,-2.45C15.57,5.39 13.92,4 12,4S8.43,5.39 8.12,7.29L7.8,9.74C7.64,10.94 8.57,12 9.78,12z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M12,6v3l4,-4 -4,-4v3c-4.42,0 -8,3.58 -8,8 0,1.57 0.46,3.03 1.24,4.26L6.7,14.8c-0.45,-0.83 -0.7,-1.79 -0.7,-2.8 0,-3.31 2.69,-6 6,-6zM18.76,7.74L17.3,9.2c0.44,0.84 0.7,1.79 0.7,2.8 0,3.31 -2.69,6 -6,6v-3l-4,4 4,4v-3c4.42,0 8,-3.58 8,-8 0,-1.57 -0.46,-3.03 -1.24,-4.26z"/>
 </vector>
